2000-02-22  Ian Lance Taylor  <ian@zembu.com>

	From Brad Lucier <lucier@math.purdue.edu>:
	* readelf.c (process_version_sections): Add casts to make sure
	argument to %* is an int.
	(process_mips_specific): Add casts to make printf arguments match
	format.

2000-02-21  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* objdump.c (dump_section_header): Change `opb' to unsigned.
	(find_symbol_for_address): Same here.
	(disassemble_data): And here.  Change `addr_offset',
	`stop_offset', `nextstop_offset' to unsigned long.
	(dump_data): Change opb to unsigned.

2000-02-18  Frank Ch. Eigler  <fche@redhat.com>

	* resrc.c: Remove unmatched #if for cygwin.

2000-02-14  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* binutils.texi: Document the change of flavor name from atpcs-special
	to special-atpcs to prevent name conflict in gdb.

2000-02-08  Timothy Wall  <twall@redhat.com>

	* objdump.c (show_line): Fix bug preventing printing of the very
	first line (line zero) of a file when interlisting source and
	assembly.  Added option to print entire context from start of file
	when the first line from that file is encountered.

2000-02-03  Timothy Wall <twall@redhat.com>

	* binutils/objdump.c (dump_section_header, find_symbol_for_address,
	show_line, disassemble_bytes, disassemble_data, dump_data):
	distinguish between octets and bytes.
	
2000-01-27  Thomas de Lellis  <tdel@windriver.com>

        * nm.c (print_symbol_info_bsd): Use bfd_is_undefined_symclass to
	check to unresolved symbols.
        (print_symbol_info_sysv):  Ditto.
        (print_symbol_info_posix):  Ditto.

        * binutils.texi: Document new 'V' symclass flag for nm.

2000-01-27  Nick Clifton  <nickc@redhat.com>

	* binutils.texi (objdump): Document new ARM specific
	disassembler options.

	* objdump.c (usage): Call disassembler_usage().

2000-01-27  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* readelf.c (get_dynamic_flags): Return buff.
	(process_dynamic_segment): Don't pass error strings to printf