@@ -1,3 +1,9 @@
+2000-02-22  Nick Clifton  <nickc@cygnus.com>
+
+	* common.h (ELF_ST_OTHER): Remove definition.
+	(ELF32_ST_OTHER): Remove definition.
+	(ELF64_ST_OTHER): Remove definition.
+
 2000-02-22  H.J. Lu  <hjl@gnu.org>
 
 	* common.h (ELFOSABI_LINUX): Define.
