@@ -1,3 +1,7 @@
+2000-02-22  Nick Clifton  <nickc@cygnus.com>
+
+	* readelf.c (process_symbol_table): Remove use of ELF_ST_OTHER.
+
 2000-02-22  Ian Lance Taylor  <ian@zembu.com>
 
 	From Brad Lucier <lucier@math.purdue.edu>:
